# Personal-Scripts

./: .gitignore  .gitmodules  calendar_dup.py  run_semantic_history_to_km.zsh
CLI/: demo_click.py
CLI/file_counts/: count_files_repl.py
CLI/toggl textbar/: get_work_times_toggl.py
Find Best Github Repos/: ipython_hist_for_when_i_did_intersections.py
TmpScripts/: .sourcery.yaml  download_toggl_projects.ipynb  download_toggl_projects.py  exploration.ipynb  get_more_obsidian_plugin_data.py  get_timery_tag_durations.py  get_webpage_word_counts.ipynb  get_webpage_word_counts.py  getting_toggl_ewa.py  how_many_times_sex.py  match_obsidian_plugin_data.py  matched_plugins.csv  merge_toggl_tags.py  new_plugins.csv  parse_json.py  plugin_list.txt  plugins.csv  processing_list_of_books.py  pydata_book_webpage_word_counts.ipynb  rewriting_get_work_toggl.ipynb  scratch_matplotlib.py  test.ipynb  test.py  timery_tag_durations.json  toggl_analysis.ipynb  undefined.ipynb
TmpScripts/Update scripts/: prewake.sh
TmpScripts/brain_fm_cat - scratch package/: pyproject.toml
TmpScripts/brain_fm_cat - scratch package/scratch_package/: brain_fm_categorization.ipynb
TmpScripts/brain_fm_cat - scratch package/scratch_package/data/: computer_brain_fm_1_answer.txt
TmpScripts/paper-qa-tool/: pyproject.toml
applescripts/: disconnect_nordvpn.scpt
codebase/: count_lines_in_swift_project.zsh
exist-api/: get_token.py
github/Find Best Github Repos/: curated_shell_hist_for_when_i_did_github_queries.zsh
notion/: get_all_databases.py
obsidian/obsidian scripts/: get_obsidian_word_count.sh
obsidian/obsidian_plugins/: get_obsidian_plugin_data_pandas.ipynb
obsidian_plugins/: obsidian_plugins_raw.csv
obsidian_plugins/csv_data/: plugin_data_1.csv  plugin_data_2.csv
openai_utils/: pyproject.toml
pavlok/pavloktest/: README.md  package.json
pavlok/pavloktest2/: index.js  package-lock.json
random_scripts/: goal_vs_num_days_vs_redux_ratio.py
revcat/: get_pricing_experiment_groups.py  never_purchased.csv  revcat_customer_overrides.py
rope/: rope_scratch.py  rope_utils.py
todoist/: todoist_labels_scripting.py
todoist/todoist_schedule_tasks/: todoist_gcal_schedule.py
todoist/todoist_shortcuts/: additional_todoist_script_info.txt  sample_table_view.py  todoist_api_minute_count_script.py  todoist_non_sync_api.py  working_table_view.py
toggl/: process_tags.py  rename_tags.py  tags.txt  tags.yaml  toggl_pandas_analysis.ipynb  toggl_reconsider_projects_tags.ipynb
toggl/old textbar prototypes/: get_ratio_tooling_work_last_week.sh  get_ratio_tooling_work_today.sh  get_total_opt_tooling_time.sh  get_total_work_time.sh  (+2 more)
trello/: update_trello_with_api.ipynb
(+6 files in other folders)
