[tool.poetry]
name = "openai-utils"
version = "0.1.0"
description = ""
authors = ["Dan Thompson <danielrthompsonjr@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
ipykernel = "^6.22.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.0.1"
pylama = "^8.4.1"
pylint = "^2.17.2"
bandit = "^1.7.5"
ipython = "^8.12.0"
pytest = "^7.3.1"
typing-extensions = "^4.5.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
mypy-extensions = "^1.0.0"
types-requests = "^2.28.11.17"
mccabe = "^0.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
