[tool.poetry]
name = "paper-qa-tool"
version = "0.1.0"
description = ""
authors = ["Dan Thompson <danielrthompsonjr@gmail.com>"]
readme = "README.md"
packages = [{include = "paper_qa_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
paper-qa = "^1.1.1"


[tool.poetry.group.dev.dependencies]
nbconvert = "^7.3.1"
black = "^23.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.0.1"
pylint = "^2.17.3"
ipython = "^8.12.0"
pytest = "^7.3.1"
typing-extensions = "^4.5.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
mypy-extensions = "^1.0.0"
types-requests = "^2.28.11.17"
isort = "^5.12.0"
pylama = "^8.4.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
